network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: embodied-ai-benchmark-network-policy
spec:
  egress:
  - ports:
    - port: 5432
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: postgres
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nginx
    ports:
    - port: 8000
      protocol: TCP
  podSelector:
    matchLabels:
      app: embodied-ai-benchmark
  policyTypes:
  - Ingress
  - Egress
